feat: add fetch discipline's flash cards route